<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="#090000"
    android:padding="15dp"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"
        android:id="@+id/llmain"
        android:layout_margin="20dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtresult"
            android:textColor="#fff"
            android:textSize="30dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtcal"
            android:text="@string/bmi"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="5dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtstatus"
            android:text="@string/health"
            android:textStyle="italic"
            android:textSize="30sp"
            android:textColor="#fff"

            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        >
        <EditText
            android:id="@+id/editweight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:hint="@string/weight"
            android:textColorHint="#F4EFEF"
            android:inputType="number"
            android:textColor="#fff"
            android:layout_marginBottom="20dp"

            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/editheight1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/height1"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:inputType="number"
                android:layout_marginBottom="15dp"
                />

            <EditText
                android:id="@+id/editheight2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="@string/height2"
                android:textColorHint="#fff"
                android:textColor="#fff"
                android:inputType="number"
                android:layout_marginBottom="15dp"
                />


        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btncalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Calculate"
        android:textColor="#fff"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:backgroundTint="#4CAF50"
        />

</LinearLayout>